<?xml version="1.0" encoding="utf-8"?>

<!--采用DrawerLayout布局-->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--标题栏-->
            <include layout="@layout/app_bar_main"/>

            <!--放置主体-->
            <RelativeLayout
                android:id="@+id/main_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="55dp">
            </RelativeLayout>
        </LinearLayout>
        <!--下部分导航栏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/main_bottom_bar"
            android:orientation="horizontal"
            android:background="@color/mainBottomBar"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/main_bottom_bar_item1_bt"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp">
                <TextView
                    android:id="@+id/main_bottom_bar_item1_text"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:text="@string/main_item1"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:singleLine="true">
                </TextView>
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_above="@id/main_bottom_bar_item1_text"
                    android:src="@drawable/hole"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                </ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_bottom_bar_item2_bt"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp">
                <TextView
                    android:id="@+id/main_bottom_bar_item2_text"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:text="@string/main_item2"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:singleLine="true">
                </TextView>
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_above="@id/main_bottom_bar_item2_text"
                    android:src="@drawable/dongtai"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                </ImageView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/main_bottom_bar_item3_bt"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp">
                <TextView
                    android:id="@+id/main_bottom_bar_item3_text"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:text="@string/main_item3"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:singleLine="true">
                </TextView>
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_above="@id/main_bottom_bar_item3_text"
                    android:src="@drawable/my"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                </ImageView>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu_navigation">


        <!--添加脚布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/footer_item_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_out"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:text="退出"
                android:textAlignment="center"
                android:textColor="@color/mainTopBar"/>
        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>